Atualizei os estilos de texto e blocos

--- a/desafios/d012/estilo/style.css
+++ b/desafios/d012/estilo/style.css
@@ -1,2 +1,65 @@
 @charset "UTF-8";
 
+* {
+    margin: 0px;
+    padding: 0px;
+}
+
+html, body {
+    min-height: 100vh;
+    background-color: aquamarine;
+}
+
+header {
+    background-color: black;
+    color: aliceblue;
+    text-align: center;
+}
+
+header > h1 {
+    padding-top: 50px;
+    font-variant: small-caps;
+}
+
+header > p {
+    padding-bottom: 50px;
+}
+
+header a, footer a {
+    color: aliceblue;
+    text-decoration: none;
+    font-weight: bolder;
+}
+
+header a:hover, footer a:hover {
+    text-decoration: underline;
+}
+
+section {
+    padding-top: 10vh;
+    padding-bottom: 10vh;
+    line-height: 2em;
+    padding-left: 30px;
+}
+
+section.imagem > p {
+    width: 250px;
+    background-color: rgba(46, 44, 44, 0.658);
+    padding-left: 5px;
+}
+
+section.normal {
+    background-color: aliceblue;
+}
+
+section.imagem {
+    background-color: rgba(98, 98, 202, 0.726);
+    color: aliceblue;
+}
+
+footer {
+    background-color: black;
+    color: aliceblue;
+    text-align: center;
+    padding: 10px;
+}
