final do projeto

--- a/desafios/d012/estilo/style.css
+++ b/desafios/d012/estilo/style.css
@@ -57,10 +57,15 @@ section {
     font-size: 3vw;
 }
 
+section > p {
+    padding-bottom: 2em;
+}
+
 section.imagem > p {
     display: inline-block;
-    background-color: rgba(46, 44, 44, 0.658);
+    background-color: rgba(0, 0, 0, 0.658);
     padding: 5px;
+    text-shadow: 1px 1px 0px black;
 }
 
 section.normal {
@@ -70,6 +75,19 @@ section.normal {
 section.imagem {
     background-color: rgba(98, 98, 202, 0.726);
     color: aliceblue;
+    box-shadow: inset 6px 6px 13px 0px;
+    background-size: cover;
+    background-attachment: fixed;
+}
+
+section#img01 {
+    background-image: url(../imagens/background001.jpg);
+    background-position: right center;
+}
+
+section#img02 {
+    background-image: url(../imagens/background002.jpg);
+    background-position: right center;
 }
 
 footer {
